--- a/lifestyle/PersonaDefinitions_lifestyle.yaml
+++ b/lifestyle/PersonaDefinitions_lifestyle.yaml
@@ -1,4 +1,7 @@
 # PersonaDefinitions_lifestyle
+#  SpeechAnchors_combined.yaml を読んで<<: *anchor でマージ
+#  各 Persona は speech_anchor_ref で口調を指定
+
 
 PersonaDefinitions:
   # --- Grim ------------------------------------------------------
