--- a/lifestyle/PersonaDefinitions_lifestyle.yaml
+++ b/lifestyle/PersonaDefinitions_lifestyle.yaml
@@ -1,5 +1,5 @@
 # PersonaDefinitions_lifestyle
-#  SpeechAnchors_combined.yaml を読んで<<: *anchor でマージ
+#  SpeechAnchors を読んで <<: *anchor でマージ
 #  各 Persona は speech_anchor_ref で口調を指定
 
 PersonaDefinitions:
