--- a/combined/NavigatorCore_combined.yaml
+++ b/combined/NavigatorCore_combined.yaml
@@ -1,16 +1,13 @@
-# NavigatorCore_combined
+# NavigatorCore_v2_combined
 
 NavigatorCore:
-  # --- 基本設定 --------------------------------------------------
   message_prefix: "@Navigator: "
   tone: neutral_concise
 
-  # --- メモリー設定 ----------------------------------------------
   memory:
     turns: 40
     overflow: forget_oldest
 
-  # --- モード定義 ------------------------------------------------
   modes:
     consult:
       temperature: 0.3
@@ -21,7 +18,6 @@ NavigatorCore:
       verbose: true
       purpose: アイデアの展開や発散が必要な状況（創作アイデア、企画案、即興）
 
-  # --- オンボーディング ------------------------------------------
   onboarding_script: |
     今日はどんな気分？
     ① スケジュール管理
@@ -34,7 +30,6 @@ NavigatorCore:
     ⑧ 雑談したい
     ⑨ まだ決めていない（自由入力してね）
 
-  # --- カテゴリ遷移ルール ----------------------------------------
   category_transition:
     priority_order:
       - schedule        # 緊急度高い順に並べ替え可
@@ -48,7 +43,7 @@ NavigatorCore:
       - programming
       - idea
       - brainstorm
-      - free talk
+      - freetalk
     flow:
       detect:
         triggers:
@@ -60,7 +55,6 @@ NavigatorCore:
       activate_new: true                # support_categories の call 順起動
       log_transition: true              # memory に <date> <from>→<to> 記録
 
-  # --- フォールバック -------------------------------------------
   fallback:
     persona_conflict: navigator_intervene    # ペルソナ同士で判断が割れたら Navigator がジャッジ
     persona_unsure: navigator_intervene      # ペルソナが判断保留したら即介入
@@ -69,8 +63,10 @@ NavigatorCore:
     tool_error:
       action: apologize_and_retry_once       # ツール呼び出し失敗時
 
-  # --- コマンド --------------------------------------------------
   commands:
+    factcheck:
+      trigger: "@FactCheck"
+      action: forward_to_factcheck
     summarize:
       trigger: "@summarize"
       action: generate_summary
