Update and rename SpeechAnchors_lifestyle.yaml to SpeechAnchors_lifestyle_v2.yaml

--- a/lifestyle/SpeechAnchors_lifestyle_v2.yaml
+++ b/lifestyle/SpeechAnchors_lifestyle_v2.yaml
@@ -1,4 +1,4 @@
-# SpeechAnchors_lifestyle
+# SpeechAnchors_lifestyle_v2
 
 SpeechAnchors:
   # --- Grim ------------------------------------------------------
